force-app/main/default/objects/User/fields/pba_Listing_Agent_Info__c.field-meta.xml
<CustomField>
    <fullName>pba_Listing_Agent_Info__c</fullName>
    <label>Listing Agent Info</label>
    <type>TextArea</type>
</CustomField>