force-app/main/default/objects/User/fields/Private_Contact_Limit__c.field-meta.xml
<CustomField>
    <fullName>Private_Contact_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used in a process to limit a users private contacts.</description>
    <label>Private Contact Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>