force-app/main/default/objects/User/fields/Private_Inquiries__c.field-meta.xml
<CustomField>
    <fullName>Private_Inquiries__c</fullName>
    <description>This is the count of the &apos;private&apos; inquiries per user</description>
    <inlineHelpText>This is the count of the &apos;private&apos; inquiries per user</inlineHelpText>
    <label>#Private Inquiries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>