force-app/main/default/objects/User/fields/Region_new__c.field-meta.xml
<CustomField>
    <fullName>Region_new__c</fullName>
    <description>Deprecated</description>
    <inlineHelpText>Deprecated use Sharing region</inlineHelpText>
    <label>Region [Deprecated]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>UAE</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>