force-app/main/default/objects/User/fields/RERA_Expiry__c.field-meta.xml
<CustomField>
    <fullName>RERA_Expiry__c</fullName>
    <label>RERA Expiry</label>
    <type>Date</type>
</CustomField>