force-app/main/default/objects/User/fields/RERA_Number__c.field-meta.xml
<CustomField>
    <fullName>RERA_Number__c</fullName>
    <label>RERA Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>