force-app/main/default/objects/User/fields/SF_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Record_ID__c</fullName>
    <inlineHelpText>This is the record ID for this user</inlineHelpText>
    <label>SF Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>