force-app/main/default/objects/User/fields/User_is_allowed_to_generate_contracts__c.field-meta.xml
<CustomField>
    <fullName>User_is_allowed_to_generate_contracts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Generating User</label>
    <type>Checkbox</type>
</CustomField>