force-app/main/default/objects/User/fields/Website_Agent_Image__c.field-meta.xml
<CustomField>
    <fullName>Website_Agent_Image__c</fullName>
    <formula>LOWER(&quot;https://www.gulfsothebysrealty.com/agent-image/&quot; &amp;  FirstName  &amp; &quot;-&quot; &amp; IF ( Contains( LastName  , &quot; &quot; ), SUBSTITUTE( LastName  , &quot; &quot;, &quot;-&quot; ), 
IF ( Contains( LastName  , &quot;&apos;&quot; ), SUBSTITUTE( LastName  , &quot;&apos;&quot;, &quot;&quot; ), LastName  )) &amp; &quot;.jpg&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website Agent Image</label>
    <type>Text</type>
</CustomField>