force-app/main/default/objects/User/fields/Zoho_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for zoho sf termination automation</description>
    <inlineHelpText>Used for zoho sf termination automation</inlineHelpText>
    <label>Zoho Deactivated</label>
    <type>Checkbox</type>
</CustomField>