force-app/main/default/objects/User/validationRules/Company_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_must_be_selected</fullName>
    <active>true</active>
    <description>This is mandatory as it trigger the initials for the brokers reference number</description>
    <errorConditionFormula>ISPICKVAL( gsir_company__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>gsir_company__c</errorDisplayField>
    <errorMessage>Company cannot be empty</errorMessage>
</ValidationRule>