force-app/main/default/objects/User/validationRules/MobilePhone_are_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>MobilePhone_are_numbers</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNUMBER(  MobilePhone  ))</errorConditionFormula>
    <errorMessage>Mobile number must only contain numbers.</errorMessage>
</ValidationRule>