force-app/main/default/objects/User/validationRules/pba__MobileNumberIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>pba__MobileNumberIsRequired</fullName>
    <active>true</active>
    <description>Mobile number is required if the User has opted in to receive text messages.</description>
    <errorConditionFormula>AND($User.pba__HasOptedInToTextMessages__c = true, ISBLANK($User.MobilePhone))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>To enable text messages, please fill out mobile number.</errorMessage>
</ValidationRule>