force-app/main/default/objects/User/validationRules/Phones_are_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Phones_are_numbers</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNUMBER(  Phone  ))</errorConditionFormula>
    <errorMessage>Phone number must only contain numbers.</errorMessage>
</ValidationRule>