force-app/main/default/objects/User/listViews/ActiveUsers.listView-meta.xml
<ListView>
    <fullName>ActiveUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>gsir_brn__c</columns>
    <columns>CORE.USERS.PHONE</columns>
    <columns>ListingAgentName__c</columns>
    <columns>Company_Staff_GUID__c</columns>
    <columns>pba_Listing_Agent_Info__c</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>User_ID__c</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users</label>
    <language>en_US</language>
</ListView>