force-app/main/default/objects/User/listViews/UAEPhotographers.listView-meta.xml
<ListView>
    <fullName>UAEPhotographers</fullName>
    <booleanFilter>1 OR  2 OR 3 OR 4 OR 5 OR 6 OR 7</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_ID__c</field>
        <operation>equals</operation>
        <value>0057T000002lbvW</value>
    </filters>
    <filters>
        <field>User_ID__c</field>
        <operation>equals</operation>
        <value>0057T000002izoY</value>
    </filters>
    <filters>
        <field>User_ID__c</field>
        <operation>equals</operation>
        <value>0057T000002jLxm</value>
    </filters>
    <filters>
        <field>User_ID__c</field>
        <operation>equals</operation>
        <value>0057T000002k0E9</value>
    </filters>
    <filters>
        <field>User_ID__c</field>
        <operation>equals</operation>
        <value>0057T000003OmrO</value>
    </filters>
    <filters>
        <field>User_ID__c</field>
        <operation>equals</operation>
        <value>0057T000002yBSA</value>
    </filters>
    <filters>
        <field>User_ID__c</field>
        <operation>equals</operation>
        <value>0057T000003OmrJ</value>
    </filters>
    <label>UAE Photographers</label>
    <language>en_US</language>
</ListView>