force-app/main/default/objects/User/listViews/UK_Photographers.listView-meta.xml
<ListView>
    <fullName>UK_Photographers</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_ID__c</field>
        <operation>equals</operation>
        <value>0057T000003OmrJ</value>
    </filters>
    <filters>
        <field>User_ID__c</field>
        <operation>equals</operation>
        <value>0057T000002yBSA</value>
    </filters>
    <filters>
        <field>User_ID__c</field>
        <operation>equals</operation>
        <value>0057T000003OmrO</value>
    </filters>
    <label>UK Photographers</label>
    <language>en_US</language>
</ListView>